--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,10 @@ img {
     height: auto;
 }
 
+textarea {
+    resize: none;
+}
+
 :root {
     --basic-black: #2E2F42;
     --wight: #F4F4FD;
@@ -666,6 +670,7 @@ img {
     background-color: var(--wight-modal);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    padding: 24px 24px;
 }
 
 .close-modal {
@@ -675,8 +680,8 @@ img {
     background-color: var(--wight-footer-text);
     width: 24px;
     height: 24px;
-    margin-left: 360px;
-    margin-top: 24px;
+    margin-left: 336px;
+    /* margin-top: 24px; */
 
     transition: background-color var(--time_animation);
 }
@@ -698,4 +703,74 @@ img {
 .close-modal:hover svg,
 .close-modal:focus svg {
     fill: var(--wight);
+}
+
+.modal-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--basic-black);
+    margin-top: 48px;
+    margin-bottom: 16px;
+}
+
+.form-field {
+    margin-bottom: 8px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-text-04 {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    color: var(--gray-border-icon);
+}
+
+.form-text-01 {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: var(--gray-border-icon);
+}
+
+.form-frame {
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px; 
+    margin-top: 4px;
+    height: 40px;
+}
+
+.modal-send {
+    display: flex;
+    align-items: center;
+    text-align: center; 
+    justify-content: center;
+    width: 169px;
+    height: 56px;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.04em;
+    color: var(--wight-button);
+    
+    margin-left: auto;
+    margin-right: auto;
+    background: var(--iris);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+
+    margin-top: 24px;
+    transition: background var(--time_animation);
+}
+
+.modal-send:hover,
+.modal-send:focus {
+    background: var(--ocean);
 }
